Added Sequence diagram

--- a/ImageCaptionGenerator.ipynb
+++ b/ImageCaptionGenerator.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b3f53fb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-10 14:15:59.169327: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pickle import dump, load\n",
@@ -41,14 +50,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-10 11:48:56.267776: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-02-10 14:16:27.737130: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3249745986654a388a8ea742c8be81f3",
+       "model_id": "756654d0343041098b965830abc41b51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87cf6e877c7a488f8361dec834afa2b3",
+       "model_id": "6ebf9abff59941e2890baaee85d23dc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "491b1206",
    "metadata": {},
    "outputs": [],
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b49531df",
    "metadata": {},
    "outputs": [
@@ -210,13 +219,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vocabulary size: 2105 \n"
+      "vocabulary size: 2104 \n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26680e3aebe74a4fbcf37de8a225aa82",
+       "model_id": "a91e86d3a74d4acb85406a332cbea654",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,12 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "afc01872",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load doc into memory\n",
     "def load_doc(filename):\n",
     "    # open the file as read only\n",
     "    file = open(filename, 'r')\n",
@@ -303,7 +311,7 @@
     "def load_clean_descriptions(filename, dataset):\n",
     "    # load document\n",
     "    doc = load_doc(filename)\n",
-    "    descriptions = dict()\n",
+    "    descriptions = {}\n",
     "    for line in doc.split('\\n'):\n",
     "        # split line by white space\n",
     "        tokens = line.split()\n",
@@ -346,7 +354,57 @@
    "id": "386babf3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# convert a dictionary of clean descriptions to a list of descriptions\n",
+    "def to_lines(descriptions):\n",
+    "    all_desc = list()\n",
+    "    for key in descriptions.keys():\n",
+    "        [all_desc.append(d) for d in descriptions[key]]\n",
+    "    return all_desc\n",
+    "\n",
+    "# fit a tokenizer given caption descriptions\n",
+    "def create_tokenizer(descriptions):\n",
+    "    lines = to_lines(descriptions)\n",
+    "    tokenizer = Tokenizer()\n",
+    "    tokenizer.fit_on_texts(lines)\n",
+    "    return tokenizer\n",
+    "\n",
+    "# prepare tokenizer\n",
+    "tokenizer = create_tokenizer(train_descriptions)\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "print('Vocabulary Size: %d' % vocab_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8605a8bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create sequences of images, input sequences and output words for an image\n",
+    "def create_sequences(tokenizer, max_length, descriptions, photos, vocab_size):\n",
+    "    X1, X2, y = list(), list(), list()\n",
+    "    # walk through each image identifier\n",
+    "    for key, desc_list in descriptions.items():\n",
+    "        # walk through each description for the image\n",
+    "        for desc in desc_list:\n",
+    "            # encode the sequence\n",
+    "            seq = tokenizer.texts_to_sequences([desc])[0]\n",
+    "            # split one sequence into multiple X,y pairs\n",
+    "            for i in range(1, len(seq)):\n",
+    "                # split into input and output pair\n",
+    "                in_seq, out_seq = seq[:i], seq[i]\n",
+    "                # pad input sequence\n",
+    "                in_seq = pad_sequences([in_seq], maxlen=max_length)[0]\n",
+    "                # encode output sequence\n",
+    "                out_seq = to_categorical([out_seq], num_classes=vocab_size)[0]\n",
+    "                # store\n",
+    "                X1.append(photos[key][0])\n",
+    "                X2.append(in_seq)\n",
+    "                y.append(out_seq)\n",
+    "    return array(X1), array(X2), array(y)"
+   ]
   }
  ],
  "metadata": {
