--- a/Image Caption generation Test Code.ipynb
+++ b/Image Caption generation Test Code.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "bfe2aec8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-15 10:13:29.103210: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "id": "7f5e02a0",
    "metadata": {},
    "outputs": [],
@@ -31,6 +40,39 @@
     "BASE_DIR = os.getcwd() + '/kaggle/input/flicker8k'\n",
     "WORKING_DIR = os.getcwd() + '/kaggle/working'\n",
     "#print(BASE_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4592a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract Image Feature\n",
+    "\n",
+    "model = VGG16()\n",
+    "model = Model(inputs=model.inputs, outputs=model.layers[-2].output)\n",
+    "\n",
+    "# extract feature from image\n",
+    "features = {}\n",
+    "directory = os.path.join(BASE_DIR, 'Images')\n",
+    "\n",
+    "for img_name in tqdm(os.listdir(directory)):\n",
+    "    img_path = directory + '/' + img_name\n",
+    "    image = load_img(img_path, target_size=(224, 224))\n",
+    "    # convert image pixels to numpy array\n",
+    "    image = img_to_array(image)\n",
+    "    # reshape data for model\n",
+    "    image = image.reshape((1, image.shape[0], image.shape[1], image.shape[2]))\n",
+    "    # preprocess image for vgg\n",
+    "    image = preprocess_input(image)\n",
+    "    # extract features\n",
+    "    feature = model.predict(image, verbose = 0)\n",
+    "    # get image ID\n",
+    "    image_id = img_name.split('.')[0]\n",
+    "    # store feature\n",
+    "    features[image_id] = feature"
    ]
   },
   {
@@ -346,32 +388,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# Extract Image Feature\n",
-    "\n",
-    "model = VGG16()\n",
-    "model = Model(inputs=model.inputs, outputs=model.layers[-2].output)\n",
-    "\n",
-    "# extract feature from image\n",
-    "features = {}\n",
-    "directory = os.path.join(BASE_DIR, 'Images')\n",
-    "\n",
-    "for img_name in tqdm(os.listdir(directory)):\n",
-    "    img_path = directory + '/' + img_name\n",
-    "    image = load_img(img_path, target_size=(224, 224))\n",
-    "    # convert image pixels to numpy array\n",
-    "    image = img_to_array(image)\n",
-    "    # reshape data for model\n",
-    "    image = image.reshape((1, image.shape[0], image.shape[1], image.shape[2]))\n",
-    "    # preprocess image for vgg\n",
-    "    image = preprocess_input(image)\n",
-    "    # extract features\n",
-    "    feature = model.predict(image, verbose = 0)\n",
-    "    # get image ID\n",
-    "    image_id = img_name.split('.')[0]\n",
-    "    # store feature\n",
-    "    features[image_id] = feature"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
